# wily

./: Cargo.toml
src/: bus.rs  cli.rs  daemon.rs  logging.rs  main.rs  schema.rs  schemas.rs  shutdown_notifier.rs  task_handle.rs  utils.rs  wily.aldrin
src/cli/: list.rs  query.rs  share.rs  shut_down.rs  unshare.rs
src/daemon/: daemon_calls.rs  private_bus.rs  public_bus.rs  wily_calls.rs
src/schemas/: daemon.aldrin  wily.aldrin
