[package]
name = "wily"
description = "Wily file sharing"
version = "0.1.0"
authors = ["Dennis Hamester"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dennis-hamester/aldrin"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
url = "2.5.0"

[dependencies.aldrin]
git = "https://github.com/dennis-hamester/aldrin.git"
rev = "f9f35d818a3e58ba0a857ce70f2d3f8b9ae87f42"
features = [
    "channel",
    "codegen",
    "tokio",
]

[dependencies.aldrin-broker]
git = "https://github.com/dennis-hamester/aldrin.git"
rev = "f9f35d818a3e58ba0a857ce70f2d3f8b9ae87f42"

[dependencies.chrono]
version = "0.4.35"
default-features = false
features = [
    "clock",
    "now",
]

[dependencies.clap]
version = "4.4.11"
features = [
    "derive",
    "wrap_help",
]

[dependencies.futures]
version = "0.3.29"
default-features = false

[dependencies.parking_lot]
version = "0.12.1"
features = ["send_guard"]

[dependencies.tokio]
version = "1.34.0"
features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
]

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]
