[package]
name = "wily"
description = "Wily file sharing"
version = "0.1.0"
authors = ["Dennis Hamester"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dennis-hamester/aldrin"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"

[dependencies.aldrin]
git = "https://github.com/dennis-hamester/aldrin.git"
rev = "0fd3017b4fe74dd8fc729de2e4c015a14187c926"
features = ["codegen"]

[dependencies.aldrin-broker]
git = "https://github.com/dennis-hamester/aldrin.git"
rev = "0fd3017b4fe74dd8fc729de2e4c015a14187c926"

[dependencies.clap]
version = "4.4.11"
features = [
    "derive",
    "wrap_help",
]

[dependencies.tokio]
version = "1.34.0"
features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
]
